--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
 
   <string name="setting_category_about">About</string>
   <string name="setting_about_summary">A demo application.</string>
+    <string name="tab_more">More</string>
 </resources>
